--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@vx/gradient": "0.0.199",
+    "@vx/group": "0.0.199",
+    "@vx/hierarchy": "0.0.199",
+    "@vx/shape": "^0.0.190",
+    "d3-hierarchy": "^2.0.0",
+    "react-measure": "^2.5.2",
+    "react-move": "^6.4.0",
+    "react-spring": "^8.0.27",
+    "shortid": "^2.2.15",
     "axios": "^0.21.0",
     "bowser": "^2.11.0",
     "classnames": "^2.2.6",
@@ -36,11 +46,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "react-select": "^3.1.0",
+    "react-stack-grid": "^0.7.1",
     "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "socket.io-client": "^2.3.1",
+    "string-replace-async": "^2.0.0",
     "string-strip-html": "^6.3.0"
   },
   "scripts": {
